// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XDebugControl/> renders correctly provided no props 1`] = `
<div
  className="BigLoader"
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    className="LoadingIndicator LoadingIndicator--Big"
  >
    <div
      className="LoadingIndicator_Bounce1"
    />
    <div
      className="LoadingIndicator_Bounce2"
    />
    <div
      className="LoadingIndicator_Bounce3"
    />
  </div>
</div>
`;

exports[`<XDebugControl/> renders correctly when the container prop is undefined 1`] = `
<div
  className="BigLoader"
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    className="LoadingIndicator LoadingIndicator--Big"
  >
    <div
      className="LoadingIndicator_Bounce1"
    />
    <div
      className="LoadingIndicator_Bounce2"
    />
    <div
      className="LoadingIndicator_Bounce3"
    />
  </div>
</div>
`;

exports[`<XDebugControl/> renders correctly when the site is loading 1`] = `
<div
  className="BigLoader"
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    className="LoadingIndicator LoadingIndicator--Big"
  >
    <div
      className="LoadingIndicator_Bounce1"
    />
    <div
      className="LoadingIndicator_Bounce2"
    />
    <div
      className="LoadingIndicator_Bounce3"
    />
  </div>
</div>
`;

exports[`<XDebugControl/> renders correctly when the site loading status is undefined 1`] = `
<div
  className="BigLoader"
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    className="LoadingIndicator LoadingIndicator--Big"
  >
    <div
      className="LoadingIndicator_Bounce1"
    />
    <div
      className="LoadingIndicator_Bounce2"
    />
    <div
      className="LoadingIndicator_Bounce3"
    />
  </div>
</div>
`;

exports[`<XDebugControl/> renders correctly when the site produces an error with a message 1`] = `
<section
  className="Error"
  style={
    Object {
      "border": "2px solid #FF0000",
      "color": "#FF0000",
      "padding": ".25em",
    }
  }
>
  <div
    className="Error__Message"
  >
    <div
      style={
        Object {
          "fontSize": "120%",
          "marginBottom": "1em",
          "textAlign": "center",
        }
      }
    >
      Error generated in 
      <span
        className="Error__Message__Source"
      >
        Site Container
      </span>
    </div>
    <div
      className="Error__Message__Text"
    >
      An error happened
    </div>
    <div
      className="Error__Message__CTA"
      style={
        Object {
          "fontSize": "120%",
          "marginTop": "1em",
          "textAlign": "center",
        }
      }
    >
      <section>
        <p>
          Try to quit and restart Local. Yes: turning it off and on again 
          <em>
            might
          </em>
           help.
        </p>
        <p>
          If the issue persists please open an issue 
          <a
            href="https://github.com/lucatume/local-addon-xdebug-control/issues/new"
          >
            on the addon repository
          </a>
           containing the message above, how you got here, what you were trying to do and your setup.
        </p>
      </section>
    </div>
  </div>
</section>
`;

exports[`<XDebugControl/> renders correctly when the site produces an error with a message 2`] = `
<section
  className="Error"
  style={
    Object {
      "border": "2px solid #FF0000",
      "color": "#FF0000",
      "padding": ".25em",
    }
  }
>
  <div
    className="Error__Message"
  >
    <div
      style={
        Object {
          "fontSize": "120%",
          "marginBottom": "1em",
          "textAlign": "center",
        }
      }
    >
      Error generated in 
      <span
        className="Error__Message__Source"
      >
        Site Container
      </span>
    </div>
    <div
      className="Error__Message__Text"
    >
      An error happened
    </div>
    <div
      className="Error__Message__CTA"
      style={
        Object {
          "fontSize": "120%",
          "marginTop": "1em",
          "textAlign": "center",
        }
      }
    >
      <section>
        <p>
          Try to quit and restart Local. Yes: turning it off and on again 
          <em>
            might
          </em>
           help.
        </p>
        <p>
          If the issue persists please open an issue 
          <a
            href="https://github.com/lucatume/local-addon-xdebug-control/issues/new"
          >
            on the addon repository
          </a>
           containing the message above, how you got here, what you were trying to do and your setup.
        </p>
      </section>
    </div>
  </div>
</section>
`;

exports[`<XDebugControl/> renders correctly when the site produces an error with no message 1`] = `
<section
  className="Error"
  style={
    Object {
      "border": "2px solid #FF0000",
      "color": "#FF0000",
      "padding": ".25em",
    }
  }
>
  <div
    className="Error__Message"
  >
    <div
      style={
        Object {
          "fontSize": "120%",
          "marginBottom": "1em",
          "textAlign": "center",
        }
      }
    >
      Error generated in 
      <span
        className="Error__Message__Source"
      >
        Site Container
      </span>
    </div>
    <div
      className="Error__Message__Text"
    >
      no message provided
    </div>
    <div
      className="Error__Message__CTA"
      style={
        Object {
          "fontSize": "120%",
          "marginTop": "1em",
          "textAlign": "center",
        }
      }
    >
      <section>
        <p>
          Try to quit and restart Local. Yes: turning it off and on again 
          <em>
            might
          </em>
           help.
        </p>
        <p>
          If the issue persists please open an issue 
          <a
            href="https://github.com/lucatume/local-addon-xdebug-control/issues/new"
          >
            on the addon repository
          </a>
           containing the message above, how you got here, what you were trying to do and your setup.
        </p>
      </section>
    </div>
  </div>
</section>
`;
